--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "prepare": "svelte-kit sync"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.1.2",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "svelte": "^3.46.0",
+    "svelte-markdown": "^0.2.2",
     "tailwindcss": "^3.0.23"
   },
   "type": "module",
