--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,6 +24,7 @@ jobs:
 
       - run: npm install
       - run: npm run build
+      - run: "rm src/lib/bundle.json && wget -O src/lib/bundle.json https://spec.utxo.cz/22/bundle.json"
 
       - name: Add custom domain
         run: "touch build/CNAME && echo \"new.utxo.cz\" >> build/CNAME"
