--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
+    "@fontsource/montserrat": "^4.5.7",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.4",
