--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
+    "cookie": "^0.4.1",
+    "crypto-js": "^4.1.1",
+    "date-fns": "^2.28.0",
+    "ethereum-blockies-base64": "^1.0.2"
   }
 }
