--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "svelte-kit build",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync"
+    "prepare": "svelte-kit sync",
+    "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte"
+
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
@@ -15,6 +17,8 @@
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.46.0",
     "svelte-markdown": "^0.2.2",
     "tailwindcss": "^3.0.23"
