--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "preview": "svelte-kit preview",
     "prepare": "svelte-kit sync",
     "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte"
-
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
@@ -29,6 +28,10 @@
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
     "crypto-js": "^4.1.1",
+    "d3-cloud": "^1.2.5",
+    "d3-scale": "^4.0.2",
+    "d3-scale-chromatic": "^3.0.0",
+    "d3-selection": "^3.0.0",
     "date-fns": "^2.28.0",
     "ethereum-blockies-base64": "^1.0.2"
   }
