--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "prepare": "svelte-kit sync",
-    "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte"
+    "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte",
+    "version": "node -e 'console.log(require(\"./package.json\").version);' > ./lib/version.txt"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
