--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,7 +27,7 @@ jobs:
       - run: npm run build
 
       - name: Add custom domain
-        run: "touch build/CNAME && echo \"new.utxo.cz\" >> build/CNAME"
+        run: "touch build/CNAME && echo \"utxo.cz\" >> build/CNAME"
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
