--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "d3-scale-chromatic": "^3.0.0",
     "d3-selection": "^3.0.0",
     "date-fns": "^2.28.0",
-    "ethereum-blockies-base64": "^1.0.2"
+    "ethereum-blockies-base64": "^1.0.2",
+    "remove-markdown": "^0.3.0"
   }
 }
