--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "d3-selection": "^3.0.0",
     "date-fns": "^2.28.0",
     "ethereum-blockies-base64": "^1.0.2",
+    "fuse.js": "^6.5.3",
     "remove-markdown": "^0.3.0"
   }
 }
