--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ethereum-blockies-base64": "^1.0.2",
     "fuse.js": "^6.5.3",
     "lodash": "^4.17.21",
-    "remove-markdown": "^0.3.0"
+    "remove-markdown": "^0.3.0",
+    "svelte-youtube": "^0.0.2"
   }
 }
