--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "ethereum-blockies-base64": "^1.0.2",
     "fuse.js": "^6.5.3",
     "lodash": "^4.17.21",
+    "qrcode-svg": "^1.1.0",
     "remove-markdown": "^0.3.0",
+    "svelte-qrcode": "^1.0.0",
     "svelte-scrolling": "^1.1.1",
     "svelte-youtube": "^0.0.2"
   }
