--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@faker-js/faker": "^6.1.2",
     "@fontsource/montserrat": "^4.5.7",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.3.10",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
