--- a/package.json
+++ b/package.json
@@ -2,11 +2,8 @@
   "name": "utxo23-web",
   "version": "1.3.0",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "prepare": "svelte-kit sync",
+    "dev": "vite de",
+    "build": "vite build",
     "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte",
     "bump-version": "node -e 'console.log(\"export const version = \\\"\"+require(\"./package.json\").version+\"\\\";\");' > ./src/lib/version.js",
     "postinstall": "wget -O src/lib/bundle.json https://spec.utxo.cz/23/bundle.json",
@@ -15,7 +12,7 @@
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
     "@fontsource/montserrat": "^4.5.7",
-    "@sveltejs/adapter-static": "^1.0.0-next.29",
+    "@sveltejs/adapter-static": "^1.0.6",
     "@sveltejs/kit": "^1.3.10",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
@@ -23,7 +20,8 @@
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.46.0",
     "svelte-markdown": "^0.2.2",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "vite": "^4.1.1"
   },
   "type": "module",
   "dependencies": {
