--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "utxo23-web",
-  "version": "1.3.0",
+  "version": "1.9.0",
   "scripts": {
-    "dev": "vite de",
+    "dev": "vite dev",
     "build": "vite build",
     "prettier": "prettier --write --plugin-search-dir=. ./**/*.svelte",
     "bump-version": "node -e 'console.log(\"export const version = \\\"\"+require(\"./package.json\").version+\"\\\";\");' > ./src/lib/version.js",
@@ -42,8 +42,5 @@
     "svelte-qrcode": "^1.0.0",
     "svelte-scrolling": "^1.1.1",
     "svelte-youtube": "^0.0.2"
-  },
-  "engines": {
-    "node": ">=16.7"
   }
 }
